Changed Legend Colors
Updated colours for great to forgor days

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     </div>
     <div class="legend">
         <div class="great">Great</div>
-        <div id="good">Good</div>
-        <div id="average">Average</div>
-        <div id="bad">Bad</div>
-        <div id="awful">Awful</div>
-        <div id="forgor">Forgor</div>
+        <div class="good">Good</div>
+        <div class="average">Average</div>
+        <div class="bad">Bad</div>
+        <div class="awful">Awful</div>
+        <div class="forgor">Forgor</div>
     </div>
 <script type="text/javascript" src="script.js"></script>
 </body>
