Graph and Notes prototype
added graph and notes element to record number of great-forgor days and notes for each day

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="graph">
+        <div class="pie"></div>
+    </div>
     <div class="container">
         <div class="header">
             <span><</span>
@@ -30,6 +33,7 @@
         </div>
         <div class="dates"></div>
     </div>
+
     <div class="legend">
         <div class="great">Great</div>
         <div class="good">Good</div>
@@ -38,6 +42,8 @@
         <div class="awful">Awful</div>
         <div class="forgor">Forgor</div>
     </div>
+    <textarea class="notes" id="note" >beans</textarea>
+
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
