--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
         <div class="bad">Bad</div>
         <div class="awful">Awful</div>
         <div class="forgor">Forgor</div>
+        <div id="save">Save</div>
+        <div id="error">Please Save/Cancel!</div>
     </div>
-    <textarea class="notes" id="note" >beans</textarea>
-
+    <textarea class="notes" id="note" ></textarea>
+    
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
