--- a/index.html
+++ b/index.html
@@ -9,40 +9,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="graph">
-        <div class="pie"></div>
-    </div>
-    <div class="container">
-        <div class="header">
-            <span><</span>
-            <div class="date">
-                <h5></h5>
-                <h1></h1>
-                <p></p>
+    <div class="body">
+        <div class="graph">
+            <div class="pie"></div>
+        </div>
+        <div class="container">
+            <div class="header">
+                <span><</span>
+                <div class="date">
+                    <h5></h5>
+                    <h1></h1>
+                    <p></p>
+                </div>
+                <span>></span>
             </div>
-            <span>></span>
+            <div class="days">
+                <div>MON</div>
+                <div>TUE</div>
+                <div>WED</div>
+                <div>THU</div>
+                <div>FRI</div>
+                <div>SAT</div>
+                <div>SUN</div>
+            </div>
+            <div class="dates"></div>
         </div>
-        <div class="days">
-            <div>MON</div>
-            <div>TUE</div>
-            <div>WED</div>
-            <div>THU</div>
-            <div>FRI</div>
-            <div>SAT</div>
-            <div>SUN</div>
+    
+        <div class="legend">
+            <div class="great">Great</div>
+            <div class="good">Good</div>
+            <div class="average">Average</div>
+            <div class="bad">Bad</div>
+            <div class="awful">Awful</div>
+            <div class="forgor">Forgor</div>
+            <div id="save">Save</div>
+            <div id="error">Please Save/Cancel!</div>
         </div>
-        <div class="dates"></div>
-    </div>
-
-    <div class="legend">
-        <div class="great">Great</div>
-        <div class="good">Good</div>
-        <div class="average">Average</div>
-        <div class="bad">Bad</div>
-        <div class="awful">Awful</div>
-        <div class="forgor">Forgor</div>
-        <div id="save">Save</div>
-        <div id="error">Please Save/Cancel!</div>
     </div>
     <textarea class="notes" id="note" ></textarea>
     
