--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="graph-container">
+        <div class="pie"></div>
+    </div>
     <div class="body">
-        <div class="graph">
-            <div class="pie"></div>
-        </div>
+
+    
         <div class="container">
             <div class="header">
                 <span><</span>
@@ -47,7 +49,7 @@
         </div>
     </div>
     <textarea class="notes" id="note" ></textarea>
-    
+
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
