Graph Toggle and bugfix
Added button to toggle graph
Fixed bug where calendar breaks every 31st of a month

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <div class="graph-container">
         <div class="pie"></div>
     </div>
+    <div class="graph-button">Graph: On</div>
     <div class="body">
-
-    
         <div class="container">
             <div class="header">
                 <span><</span>
